Fix options for unit test CI/CD